--- a/index.html
+++ b/index.html
@@ -20,3 +20,10 @@
   <script src="script.js"></script>
 </body>
 </html>
+<form id="image-form">
+  <input type="text" id="post-title" placeholder="Enter post title" required>
+  <input type="file" id="image-upload" accept="image/*" required>
+  <button type="submit">Post Image</button>
+</form>
+<section id="image-feed"></section>
+
