--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Image Posting Website</title>
+  <title>Image Sharing Platform</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
-    <h1>Welcome to My Image Sharing Platform</h1>
+    <h1>Image Sharing Platform</h1>
   </header>
   <main>
     <form id="image-form">
-      <input type="file" id="image-upload" accept="image/*">
+      <input type="text" id="post-title" placeholder="Enter post title" required>
+      <input type="file" id="image-upload" accept="image/*" required>
       <button type="submit">Post Image</button>
     </form>
     <section id="image-feed"></section>
@@ -20,10 +22,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-<form id="image-form">
-  <input type="text" id="post-title" placeholder="Enter post title" required>
-  <input type="file" id="image-upload" accept="image/*" required>
-  <button type="submit">Post Image</button>
-</form>
-<section id="image-feed"></section>
-
